fix firefox nag alignment
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@20733 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_content-nav.scss
+++ b/src/main/resources/scss/_content-nav.scss
@@ -43,6 +43,9 @@
 				overflow: visible;
 				cursor: default;
 				margin-left: 0.4em;
+				.x-gecko & {
+					top: -25px;
+				}
 				&:hover {
 					color: inherit;
 
